feat: [IRO-282]: add socket mode communication for slack
